# protein-subcellular-localization

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_setup.sh
configs/: deadline.yaml  default.yaml  medium.yaml  small.yaml
data/: README.md
data/raw/: benchmarking_dataset.fasta
notebooks/: exploratory_analysis.ipynb
report/: content_eng.tex  content_fr.tex  eda.md  report.tex  report_eng.tex  report_fr.tex  titlepage_eng.tex  titlepage_fr.tex
scripts/: eda_report.py  evaluate.py  extract_esmc_embeddings.py  extract_prostt5_embeddings.py  ingest_data.sh  make_small_dataset.py  plot_results.py  prepare_metadata.py  prepare_splits.py  train.py
slides/: slides.html
src/: __init__.py
src/data/: __init__.py  collate.py  dataset.py  splits.py
src/embeddings/: __init__.py  concat.py  fetch_embeddings.py  fetch_esmc.py  fetch_prostt5.py  fetch_protbert.py  loaders.py
src/eval/: __init__.py  evaluate.py  metrics.py
src/models/: __init__.py  fusion_model.py  heads.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: common.py
tests/: test_shapes.py
